# EMsim

./: .gitignore  CMakeLists.txt  README.md
include/: JSONReader.h  Matrix3.h  Objects.h  PhysicsEngine.h  Renderer.h  Vec3.h
scenes/: circular.json  coloumb.json  cubes.json  cyclotron.json  dipole.json  example.json  field.json  quad.json
src/: JSONReader.cpp  Objects.cpp  PhysicsEngine.cpp  Renderer.cpp  main.cpp
